Change media query for site name font-size and fix overflow scroll issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,200;0,300;1,200;1,300&display=swap');
-*{
-  box-sizing: border-box;
-}
+// *{
+//   box-sizing: border-box;
+// }
 body {
   min-height:100vh;
-  width: 100%;
   background-color: #7eb9bf;
 }
 // #7897AB  blue
